# fluxmirror

./: .gitignore  CLAUDE.md  Cargo.toml  DOCS.md  Makefile  README.md  build.gradle.kts  gemini-extension.json  settings.gradle.kts
.bkit/audit/: 2026-04-20.jsonl  2026-04-21.jsonl  2026-04-22.jsonl  2026-04-23.jsonl  2026-04-25.jsonl
.bkit/state/: pdca-status.json  session-history.json
.claude-plugin/: marketplace.json
.github/workflows/: install-sim.yml  release.yml  rust-release.yml  test.yml
.omc/: project-memory.json
.omc/sessions/: 0684e3fd-2a4c-4b10-b9e0-3c22d1160405.json  21933ada-d430-47e2-b462-79c3a1aebe18.json  2a8e67e0-30d7-4191-9b77-de0d0d473237.json  62f4d0d6-5331-4313-8981-908f36051b0d.json  7cd0558e-2f25-4c85-816e-971c8ba94451.json  9021de5b-52f2-4b51-b2b3-1e2b6cbd5775.json  9286b7ab-3225-42c7-b436-c60a114fd4ce.json  983abb76-9125-46f4-be2e-776556cfac80.json  9ed55fd2-eb09-4b49-a53d-f1801995508f.json  a1a1e64b-f10f-4a4a-a105-bd55843dd0a5.json  d20e4235-616d-44b5-99a3-7965a500a851.json  db96d599-0b86-46b8-91a2-ce8b5321c546.json
.omc/state/: hud-state.json  hud-stdin-cache.json  mission-state.json  subagent-tracking.json
commands/: about.toml  agent.toml  init.toml  timezone.toml  today.toml
crates/fluxmirror-ai/: Cargo.toml
crates/fluxmirror-ai/prompts/: anomaly.txt  daily.txt  project.txt  session.txt
crates/fluxmirror-ai/src/: anomaly_story.rs  budget.rs  cache.rs  daily_narrative.rs  lib.rs  prompts.rs  redact_outbound.rs  session_intent.rs  types.rs
crates/fluxmirror-ai/src/provider/: anthropic.rs  mod.rs  ollama.rs
crates/fluxmirror-ai/tests/: integration.rs
crates/fluxmirror-cli/: Cargo.toml
crates/fluxmirror-cli/src/: lib.rs  main.rs
crates/fluxmirror-cli/src/cmd/: config.rs  daily_totals.rs  db_path.rs  doctor.rs  histogram.rs  hook.rs  init.rs  mod.rs  per_day_files.rs  proxy.rs  sqlite.rs  upgrade.rs  util.rs  window.rs  wrapper.rs
crates/fluxmirror-cli/src/cmd/report/: about.rs  agent.rs  agents.rs  compare.rs  cost.rs  day.rs  git_narrative.rs  html.rs  html_day.rs  html_io.rs  mod.rs  today.rs  tools.rs  week.rs  week_summary.rs  yesterday.rs
crates/fluxmirror-cli/tests/: init_demo_row.rs  redact.rs  report_about.rs  report_agent.rs  report_agent_html.rs  report_agents.rs  report_auto_out.rs  report_compare.rs  report_compare_html.rs  report_today.rs  report_today_html.rs  report_week.rs  report_week_html.rs  report_week_html_business.rs  report_week_narrative.rs  report_yesterday.rs  report_yesterday_html.rs  upgrade_smoke.rs
crates/fluxmirror-cli/tests/snapshots/: week_html_en.html  week_html_en.sha256  week_html_ko.html
crates/fluxmirror-core/: Cargo.toml
crates/fluxmirror-core/src/: config.rs  errors.rs  event.rs  lib.rs  normalize.rs  paths.rs  tz.rs
crates/fluxmirror-core/src/cost/: mod.rs
crates/fluxmirror-core/src/redact/: mod.rs
crates/fluxmirror-core/src/report/: ai_narrative.rs  anomaly.rs  data.rs  dto.rs  lang.rs  mod.rs  projects.rs  sessions.rs
crates/fluxmirror-core/tests/: anomaly_detect.rs  daily_narrative.rs  projects_clustering.rs  session_intent.rs
crates/fluxmirror-proxy/: Cargo.toml
crates/fluxmirror-proxy/src/: bridge.rs  cli.rs  lib.rs  writer.rs
crates/fluxmirror-store/: Cargo.toml
crates/fluxmirror-store/src/: lib.rs  sqlite.rs
crates/fluxmirror-studio/: Cargo.toml  build.rs
crates/fluxmirror-studio/src/: embed.rs  lib.rs  main.rs  redact_layer.rs
crates/fluxmirror-studio/src/api/: anomalies.rs  file.rs  mod.rs  now.rs  projects.rs  replay.rs  sessions.rs  today.rs  week.rs
crates/fluxmirror-studio/tests/: api_anomalies.rs  api_file.rs  api_now.rs  api_projects.rs  api_replay.rs  api_session_detail.rs  api_sessions.rs  api_sessions_intent.rs  api_today.rs  api_today_narrative.rs  api_week.rs
crates/fluxmirror-studio/tests/common/: mod.rs
docs/: PHASE2.md  PHASE3.md  PHASE4.md  PRICING_SOURCES.md  architecture.md
docs/adr/: 0001-single-binary.md  0002-cross-platform-wrapper.md  0003-storage-trait.md  0004-onboarding.md
gemini-extension/: QUICKSTART.md  README.md  gemini-extension.json
gemini-extension/commands/: compare.toml  init.toml  language.toml  yesterday.toml
gemini-extension/commands/fluxmirror/: about.toml  agent.toml  agents.toml  compare.toml  config.toml  doctor.toml  init.toml  language.toml  setup.toml  timezone.toml  today.toml  week.toml  yesterday.toml
gemini-extension/hooks/: hooks.json  run-hook.sh  session-log.sh
gemini-extension/scripts/: report-data.sh
hooks/: hooks.json  run-hook.sh
manifests/: source.yaml
plugins/fluxmirror/: QUICKSTART.md  README.md  qwen-extension.json
plugins/fluxmirror/.claude-plugin/: plugin.json
plugins/fluxmirror/commands/: about.md  agent.md  cfg.md  compare.md  init.md  lang.md  report-today.md  setup.md  timezone.md  today.md  tz.md  week.md  yesterday.md
plugins/fluxmirror/commands/fluxmirror/: about.md  agent.md  agents.md  compare.md  config.md  doctor.md  language.md  report-today.md  setup.md  timezone.md  today.md  week.md  yesterday.md
plugins/fluxmirror/hooks/: _dual_write.py  hooks.json  run-hook.sh  session-log.sh
plugins/fluxmirror/wrappers/: shim.mjs  shim.sh
rust-hook/: Cargo.toml  README.md
rust-hook/src/: main.rs
rust-proxy/: Cargo.toml  README.md
rust-proxy/src/: child.rs  framer.rs  main.rs  store.rs
scripts/: build-manifests.sh  bump-version.sh  check-extension-shape.sh  check-report-commands.sh  install-sim-linux.sh  package-gemini-extension.sh  smoke-test-reports.sh  test-hooks.sh  test-rust-hook.sh  today-report.sh  verify-isolation.sh
studio-web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
studio-web/src/: App.tsx  index.css
studio-web/src/components/: AgentBar.tsx  AnomalyList.tsx  CostBlock.tsx  FileTable.tsx  HeatmapBar.tsx  HeatmapTrack.tsx  Layout.tsx  StatTile.tsx  ToolMix.tsx
studio-web/src/lib/: api.ts  useReplayClock.ts
studio-web/src/routes/: File.tsx  Home.tsx  NotFound.tsx  Projects.tsx  Replay.tsx  Session.tsx  Sessions.tsx  Today.tsx  Week.tsx
wrappers/: router.sh  shim.cmd
(+9 files in other folders)
