[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.7"
edition = "2021"
license = "MIT"
authors = ["rojae"]

[workspace.dependencies]
serde_json = "1"
rusqlite   = { version = "0.34", features = ["bundled"] }
regex      = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
