[package]
name = "fluxmirror-proxy"
version = "0.1.0"
edition = "2021"
description = "Long-running stdio MCP proxy. Spawns the real MCP server as a child, transparently relays stdin/stdout, and writes every JSON-RPC line to the FluxMirror SQLite database."
license = "MIT"

[[bin]]
name = "fluxmirror-proxy"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
