[package]
name = "fluxmirror-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fluxmirror-core  = { path = "../fluxmirror-core" }
fluxmirror-store = { path = "../fluxmirror-store" }
serde            = { version = "1", features = ["derive"] }
serde_json       = { workspace = true }
chrono           = { version = "0.4", default-features = false, features = ["clock", "std"] }
ureq             = { version = "2.10", default-features = false, features = ["tls", "json"] }
rusqlite         = { workspace = true }
sha2             = { version = "0.10", default-features = false }

[dev-dependencies]
tempfile = "3"
mockito  = { version = "1.5", default-features = false }
