[package]
name = "fluxmirror-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fluxmirror_cli"
path = "src/lib.rs"

[[bin]]
name = "fluxmirror"
path = "src/main.rs"

[dependencies]
fluxmirror-core  = { path = "../fluxmirror-core" }
fluxmirror-store = { path = "../fluxmirror-store" }
fluxmirror-proxy = { path = "../fluxmirror-proxy" }
rusqlite         = { workspace = true }
serde_json       = { workspace = true }
chrono           = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz        = "0.10"
gethostname      = "0.4"
clap             = { version = "4", features = ["derive"] }
ureq             = { version = "2.10", default-features = false, features = ["tls", "json"] }
sha2             = "0.10"
tempfile         = "3"

[dev-dependencies]
rusqlite         = { workspace = true }
chrono           = { version = "0.4", default-features = false, features = ["clock", "std"] }
fluxmirror-store = { path = "../fluxmirror-store" }
