[package]
name = "fluxmirror-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz   = { version = "0.10" }
serde       = { version = "1", features = ["derive"] }
serde_json  = { workspace = true }
gethostname = "0.4"

[dev-dependencies]
tempfile = "3"
