[package]
name = "fluxmirror-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fluxmirror-core = { path = "../fluxmirror-core" }
rusqlite        = { workspace = true }
serde_json      = { workspace = true }
chrono          = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
