[package]
name = "fluxmirror-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fluxmirror_studio"
path = "src/lib.rs"

[[bin]]
name = "fluxmirror-studio"
path = "src/main.rs"

[dependencies]
fluxmirror-core  = { path = "../fluxmirror-core" }
fluxmirror-store = { path = "../fluxmirror-store" }
fluxmirror-ai    = { path = "../fluxmirror-ai" }

rusqlite         = { workspace = true }
serde            = { version = "1", features = ["derive"] }
serde_json       = { workspace = true }
chrono           = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz        = "0.10"

axum             = "0.7"
tower            = "0.5"
tower-http       = { version = "0.6", features = ["fs", "trace"] }
tokio            = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap             = { version = "4", features = ["derive"] }
include_dir      = "0.7"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
reqwest  = { version = "0.12", default-features = false, features = ["rustls-tls"] }
